[package]
name = "key-extractor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
infer = "0.5.0"
tree_magic = "0.2.3"
csv = "1.1.6"
calamine = "0.18.0"
log = "0.4.14"

[dev-dependencies]
pretty_env_logger = "0.4.0"